Avoid app name text overflow

--- a/src/app/account/account.component.scss
+++ b/src/app/account/account.component.scss
@@ -21,6 +21,9 @@
         p
         {
             margin: 0;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
         }
     }
 }
